--- a/src/laboratory/templates/student/list_student.html
+++ b/src/laboratory/templates/student/list_student.html
@@ -8,7 +8,7 @@
     <ul>
     {% for student in object_list %}
         <li>
-        <a href="{% url 'info_student' pk=student.id %}">{{ student.id }}: {{ student.first_name }}</a>
+        <a href="{% url 'info_student' pk=student.id %}">{{ student.id }}: {{ student.first_name }} {{ student.last_name }}</a>
         <a href="{% url 'update_student' pk=student.id %}">Update</a>
         <a href="{% url 'delete_student' pk=student.id %}">Delete</a>
         </li>
